--- a/src/pdf/PDFViewer.css
+++ b/src/pdf/PDFViewer.css
@@ -66,6 +66,7 @@ header label {
 .page-container {
   position:relative;
   margin:10px 0;
+  min-height:50vh;
 }
 
 .page-container .r6o-content-wrapper {
