--- a/src/pdf/PDFViewer.css
+++ b/src/pdf/PDFViewer.css
@@ -82,10 +82,6 @@ header label {
   z-index:1;
 }
 
-.page-container .r6o-relation-editor {
-  z-index:1;
-}
-
 .page-container .a9s-annotationlayer {
   z-index:2;
   pointer-events:none;
@@ -93,7 +89,7 @@ header label {
 
 .page-container .r6o-annotation,
 .page-container .a9s-annotation {
-  pointer-events:all;
+  pointer-events:auto;
 }
 
 .page-container.debug .textLayer span {
@@ -112,4 +108,12 @@ header label {
 
 .page-container canvas {
   box-shadow:1px 1px 10px rgba(0, 0, 0, 0.1);
+}
+
+.r6o-connections-canvas {
+  z-index:3;
+}
+
+.r6o-connections-editor {
+  z-index:4;
 }
